Fix image issue on mobile

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -37,7 +37,6 @@
 
   &__image {
     width: 100%;
-    height: fit-content;
     transition: 0.5s ease;
     cursor: pointer;
 
